--- a/package.json
+++ b/package.json
@@ -11,11 +11,20 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.75.4",
     "react-native-fast-image": "^8.6.3",
+    "react-native-image-picker": "^7.1.2",
+    "react-native-safe-area-context": "^4.11.0",
+    "react-native-screens": "^3.34.0",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-sqlite-storage": "^6.0.1",
+    "react-native-vector-icons": "^10.2.0",
+    "react-native-video": "^6.6.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -27,6 +36,7 @@
     "@react-native/typescript-config": "0.75.4",
     "@types/react": "^18.2.6",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "@types/react-native-sqlite-storage": "^6.0.5",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
