--- a/package.json
+++ b/package.json
@@ -7,20 +7,20 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "postinstall": "patch-package"
+    "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.75.4",
+    "react-native-document-picker": "^9.3.1",
     "react-native-fast-image": "^8.6.3",
-    "react-native-image-picker": "^7.1.2",
+    "react-native-fs": "^2.20.0",
     "react-native-safe-area-context": "^4.11.0",
     "react-native-screens": "^3.34.0",
-    "react-native-snap-carousel": "^3.9.1",
     "react-native-sqlite-storage": "^6.0.1",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.6.4",
